added important in css since styling not showing on git page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,14 @@ img {
 }
 
 .jewel { 
-    box-shadow: 0 9px #999;
+    box-shadow: 0 9px #999 !important;
   }
 
 .jewel:active {
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);   
+    box-shadow: 0 5px #666 !important;
+    transform: translateY(4px) !important;   
 }
 
 .jumbotron {
-    padding: 0.5em 0.6em;
+    padding: 0.5em 0.6em !important;
 }
